# Movid

./: .gitignore  AUTHORS  LICENSE  Makefile  README  SConstruct  Sconstruct
Movid.visualstudio/: Movid.sln  Movid.vcproj
Movid.visualstudio/WOscLib/: WOscLib.vcproj
Movid.visualstudio/cJSON/: cJSON.vcproj
Movid.visualstudio/jpeg/: jpeg.vcproj
Movid.visualstudio/libevent/: libevent.vcproj
Movid.visualstudio/libfidtrack/: libfidtrack.vcproj
Movid.visualstudio/libjson/: libjson.vcproj
Movid.visualstudio/libmovid/: libmovid.vcproj
Movid.visualstudio/movid/: movid.vcproj
Movid.xcodeproj/: default.pbxuser  project.pbxproj
OpenTracker.xcodeproj/: default.pbxuser  project.pbxproj  tehansen.mode1v3  tehansen.pbxuser
contrib/: Makefile  README  SConscript  build_32.py  build_vc.bat
contrib/.msvc/: .msvc.sln  README.txt  build.bat
contrib/.msvc/contribs/: contribs.vcxproj
contrib/.msvc/event/: event.vcxproj
contrib/.msvc/fidtrack/: fidtrack.vcxproj
contrib/.msvc/ptypes/: ptypes.vcxproj
contrib/.msvc/wosclib/: wosclib.vcxproj
contrib/BGS/: AdaptiveMedianBGS.cpp  AdaptiveMedianBGS.hpp  Bgs.hpp  BgsParams.hpp  Eigenbackground.cpp  Eigenbackground.hpp  GrimsonGMM.cpp  GrimsonGMM.hpp  Image.cpp  Image.hpp  MeanBGS.cpp  MeanBGS.hpp  PratiMediodBGS.cpp  PratiMediodBGS.hpp  WrenGA.cpp  WrenGA.hpp  ZivkovicAGMM.cpp  ZivkovicAGMM.hpp
contrib/SDL_gfx-2.0.21/: ChangeLog  README  SDL_gfx.spec  configure  configure.in
contrib/WOscLib-00.09/: Makefile.in  README.txt  WOscBlob.cpp  WOscBlob.h  WOscBundle.cpp  WOscBundle.h  WOscContainer.cpp  WOscContainer.h  WOscException.cpp  WOscException.h  WOscInfo.cpp  WOscInfo.h  WOscLib.cpp  WOscLib.h  WOscMessage.cpp  WOscMessage.h  WOscMethod.cpp  WOscMethod.h  WOscNetReturn.cpp  WOscNetReturn.h  WOscPacket.cpp  WOscPacket.h  WOscPatternMatch.cpp  WOscPatternMatch.h  WOscPriorityQueue.cpp  WOscPriorityQueue.h  WOscReceiver.cpp  WOscReceiver.h  WOscReceiverMethod.cpp  WOscReceiverMethod.h  WOscString.cpp  WOscString.h  WOscTimeTag.cpp  WOscTimeTag.h  WOscUtil.cpp  WOscUtil.h  config.h  config.h.in  configure  configure.ac
contrib/WOscLib-00.09/doc/: OSC-spec-examples.html  OSC-spec.html  lgpl.html  wosclib.doxyfile
contrib/WOscLib-00.09/examples/: WOscClient.cpp  WOscClient.h  WOscServer.cpp  WOscServer.h
contrib/bitmap_munkres/: match.h
contrib/cJSON/: test
contrib/contrib-vcxproj/: build.bat  contrib-vcxproj.sln
contrib/contrib-vcxproj/libfidtrack/: libfidtrack.vcxproj  libfidtrack.vcxproj.filters
contrib/contrib-vcxproj/wosclib/: wosclib.vcxproj  wosclib.vcxproj.filters
contrib/jpeg-8/: jmemdos.c
contrib/libevent-1.4.13-stable/: config.h.in  configure
contrib/libevent-1.4.13-stable/WIN32-Prj/: libevent.vcproj
contrib/libfidtrack/: Makefile  default_trees.h  dump_graph.cpp  segment.h  topologysearch.h
contrib/libwebserver-0.5.3/: Makefile  Makefile.in  config.status  configure  configure.in  libwebserver-config
contrib/libwebserver-0.5.3/include/: config.h  config.h.in  server.h  web_server.h
docs/: Makefile  container.txt  datastream.txt  doxygen.config
gui/: pymt-gui.py  pyot.py
gui/html/: README  flashgui.swf  gui.css  index.html  init.js  mo.js  ot.js  test-stream.html  test.html
gui/html/css/: gui.css
gui/html2/: gui.css  index.html  init.js  mo.js  processing.js
gui/pymt/: pymt-gui.py  pyot.py
presets/: canny.txt  debug-calibration-camera.txt  debug-calibration-camera.txt~  debug-calibration.txt  diff-camera.txt  kinect-depth.txt  kinect-tracking.txt  mask-camera.txt  simple-camera.txt  simple-image.txt  simple-video.txt  test-blobtrack-video.txt  test-blobtrackknn-video.txt  test-contourblobs.txt  test-fiducial-camera-fullthread.txt  test-fiducial-camera.txt  test-fiducial.txt  test-fingertipfinder.txt  test-gpu-amplify.txt  test-peakfinder.txt  tracking.txt
presets/tests/: invalid-channel-blobtracker.txt  invalid-video-filename.txt
src/: Makefile  blobtracker.cpp  daemon.cpp  describe.cpp  moDaemon.cpp  moDaemon.h  moDataGenericContainer.cpp  moDataGenericContainer.h  moDataStream.cpp  moDataStream.h  moFactory.cpp  moFactory.h  moFlashGuiDrawer.as  moLog.cpp  moLog.h  moModule.cpp  moModule.h  moOSC.cpp  moOSC.h  moPipeline.cpp  moPipeline.h  moProperty.cpp  moProperty.h  moThread.cpp  moThread.h  moUtils.cpp  moUtils.h  movid.cpp  otCamera.cpp  otCamera.h  otCameraDataStream.cpp  otCameraDataStream.h  otCameraModule.cpp  otCameraModule.h  otDaemon.cpp  otDaemon.h  otDataGenericContainer.cpp  otDataGenericContainer.h  otDataStream.cpp  otDataStream.h  (+25 more)
src/modules/: .dummy.cpp  .dummy.h  moAbstractBlobTrackerModule.cpp  moAbstractBlobTrackerModule.h  moAdvancedBGSubModule.cpp  moAdvancedBGSubModule.h  moAmplifyModule.cpp  moAmplifyModule.h  moBackgroundSubtractModule.cpp  moBackgroundSubtractModule.h  moBinaryMaskModule.cpp  moBinaryMaskModule.h  moBlobFinderModule.cpp  moBlobFinderModule.h  moBlobTrackerKNNModule.cpp  moBlobTrackerKNNModule.h  moBlobTrackerModule.cpp  moBlobTrackerModule.h  moCalibrationModule.cpp  moCalibrationModule.h  moCameraModule.cpp  moCameraModule.h  moCannyModule.cpp  moCannyModule.h  moCombineModule.cpp  moCombineModule.h  moContourBlobsModule.cpp  moContourBlobsModule.h  moContourFinderModule.cpp  moContourFinderModule.h  moDilateModule.cpp  moDilateModule.h  moDistanceTransformModule.cpp  moDistanceTransformModule.h  moDumpModule.cpp  moDumpModule.h  moEqualizeHistModule.cpp  moEqualizeHistModule.h  moErodeModule.cpp  moErodeModule.h  (+94 more)
(+18 files in other folders)
